src/objects/Event_RSVP__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Event_RSVPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Event_RSVPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>7S Event RSVP</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event RSVP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Event RSVPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>User_must_be_set</fullName>
        <active>true</active>
        <description>User field cannot be blank on RSVP record</description>
        <errorConditionFormula>ISBLANK(User__c)</errorConditionFormula>
        <errorDisplayField>User__c</errorDisplayField>
        <errorMessage>User field is not set. Please set a user value.</errorMessage>
    </validationRules>
</CustomObject>